- Edit texture config (type, sprite ...) - gitignore : ignore some generate files - add tag, config physic2d

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 /Library
 /Temp
+/obj
+/Assembly-CSharp-Editor.csproj
+/Assembly-CSharp.csproj
+/Demo-UnityObserver.sln
+/Demo-UnityObserver.userprefs
